--- a/About/index.html
+++ b/About/index.html
@@ -18,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TG85STRS');</script>
 <!-- End Google Tag Manager -->
-  <title>Play Minecraft Online! | Online mc</title>
+  <title>Have Fun!</title>
 
   <link rel="icon" href="/icon.png">
   <meta name="description" content="Play Minecraft (eaglercraft) Online For Free!" />
@@ -71,7 +71,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <a href="/NOT-AN-EASTER-EGG" class="mt-5" style="font-size: 0.3mm; background-color: #8064A2;" >not an easteregg that you probably saw in the code or inspect or with rly rly good eyes&nbsp;</a>
           </div>
           <div class="mc-footer d-flex justify-content-between">
-            <div class="footer-copyright text-end text-white">This website is not affiliated with Mojang.</div>
+            <div class="footer-copyright text-end text-white">I love Jeb.</div>
             <div class="mc-dd">
               </div>
             </div>
